welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:10: error: Boolean does not take parameters
	else (vacation == true ) {
                                 ^